--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -136,13 +136,13 @@
             android:layout_marginTop="24dp"
             android:text="@string/don_t_have_an_account"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tv_to_sign_up_screen"
+            app:layout_constraintEnd_toStartOf="@id/tv_to_login_screen"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/btn_sign_up"
             app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />
 
         <TextView
-            android:id="@+id/tv_to_sign_up_screen"
+            android:id="@+id/tv_to_login_screen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
