--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,8 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/app_logo"
@@ -26,10 +25,11 @@
             android:id="@+id/tf_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="56dp"
             app:layout_constraintBottom_toTopOf="@id/tf_password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/app_logo"
+            app:layout_constraintStart_toStartOf="@id/app_logo"
             app:layout_constraintTop_toBottomOf="@id/app_logo">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -43,6 +43,7 @@
             android:id="@+id/tf_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"
             app:layout_constraintEnd_toEndOf="@id/tf_email"
@@ -74,6 +75,7 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
             android:text="@string/login"
             app:layout_constraintBottom_toTopOf="@id/tv_don_t_have_account"
@@ -86,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/don_t_have_an_account"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_to_sign_up_screen"
@@ -103,6 +106,16 @@
             app:layout_constraintEnd_toEndOf="@id/btn_login"
             app:layout_constraintStart_toEndOf="@id/tv_don_t_have_account"
             app:layout_constraintTop_toTopOf="@id/tv_don_t_have_account" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
