--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -46,9 +46,9 @@
     </fragment>
     <fragment
         android:id="@+id/addDataFragment"
-        android:name="com.mfathur.projectmasimulation1.AddDataFragment"
+        android:name="com.mfathur.projectmasimulation1.AddFriendFragment"
         android:label="fragment_add_data"
-        tools:layout="@layout/fragment_add_data" >
+        tools:layout="@layout/fragment_add_friend" >
         <action
             android:id="@+id/action_addDataFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
