--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -40,14 +40,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            app:layout_constraintBottom_toTopOf="@id/tv_friend_date_birth"
+            app:layout_constraintBottom_toTopOf="@id/tv_friend_phone_number"
             app:layout_constraintEnd_toEndOf="@id/img_friend_user"
             app:layout_constraintStart_toStartOf="@id/img_friend_user"
             app:layout_constraintTop_toBottomOf="@id/img_friend_user"
             tools:text="@tools:sample/lorem" />
 
         <TextView
-            android:id="@+id/tv_friend_date_birth"
+            android:id="@+id/tv_friend_phone_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -55,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="@id/tv_friend_name"
             app:layout_constraintStart_toStartOf="@id/tv_friend_name"
             app:layout_constraintTop_toBottomOf="@id/tv_friend_name"
-            tools:text="@tools:sample/date/ddmmyy" />
+            tools:text="@tools:sample/us_phones" />
 
         <TextView
             android:id="@+id/tv_origin_province"
@@ -63,9 +63,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/tv_friend_date_birth"
-            app:layout_constraintStart_toStartOf="@id/tv_friend_date_birth"
-            app:layout_constraintTop_toBottomOf="@id/tv_friend_date_birth"
+            app:layout_constraintEnd_toEndOf="@id/tv_friend_phone_number"
+            app:layout_constraintStart_toStartOf="@id/tv_friend_phone_number"
+            app:layout_constraintTop_toBottomOf="@id/tv_friend_phone_number"
             tools:ellipsize="end"
             tools:maxLines="4"
             tools:text="@tools:sample/lorem/random" />
