--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -26,7 +26,7 @@
             android:id="@+id/action_homeFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_addDataFragment"
+            android:id="@+id/action_homeFragment_to_addFriendFragment"
             app:destination="@id/addDataFragment" />
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
@@ -57,5 +57,11 @@
         android:id="@+id/detailFragment"
         android:name="com.mfathur.projectmasimulation1.friendship.detail.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="friend"
+            app:argType="com.mfathur.projectmasimulation1.core.domain.Friend"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 </navigation>
